[package]
name = "raphy"
version = "0.1.7"
authors = ["Brandon Lucia <blucia@gmail.com>"]
edition = "2018"
description = "A graph data structure library"
license = "Apache-2.0"
homepage = "https://brandonlucia.com"
repository = "https://github.com/blucia0a/raphy"
documentation = "https://github.com/blucia0a/raphy/blob/master/README.md"

[dependencies]
rand = "0.7.0"
criterion = "0.3"

[[bench]]
name = "csr_pagerank"
harness = false
