[package]
name = "raphy"
version = "0.1.12"
authors = ["Brandon Lucia <blucia@gmail.com>"]
edition = "2018"
description = "A graph data structure library"
license = "Apache-2.0"
homepage = "https://brandonlucia.com"
repository = "https://github.com/blucia0a/raphy"
documentation = "https://github.com/blucia0a/raphy/blob/master/README.md"
readme = "README.md"
exclude = [ "graphs/large.csr", "graphs/large.el" ]


[dependencies]
rand = "0.7.0"
bit-vec = "0.6"
rayon = "1.5.0"
csv = "1.1"
memmap2 = "0.5.4"
byteorder = "1.4.3"
byte-slice-cast = "1.2.1"
